@@ -1,0 +1,5 @@
+# Comments
+ActiveAdmin.register Contact do
+  config.comments = false
+  menu :priority => 50, :label => "AddressBook"
+end
