@@ -1,0 +1,6 @@
+<h1>Editing contact</h1>
+
+<%= render 'form' %>
+
+<%= link_to 'Show', @contact %> |
+<%= link_to 'Back', contacts_path %>
