@@ -1,0 +1,37 @@
+<h1>Listing contacts</h1>
+
+<table>
+  <tr>
+    <th>Name</th>
+    <th>Email</th>
+    <th>Website</th>
+    <th>Phone number</th>
+    <th>Mobile number</th>
+    <th>Country</th>
+    <th>Notes</th>
+    <th>User</th>
+    <th></th>
+    <th></th>
+    <th></th>
+  </tr>
+
+<% @contacts.each do |contact| %>
+  <tr>
+    <td><%= contact.name %></td>
+    <td><%= contact.email %></td>
+    <td><%= contact.website %></td>
+    <td><%= contact.phone_number %></td>
+    <td><%= contact.mobile_number %></td>
+    <td><%= contact.country %></td>
+    <td><%= contact.notes %></td>
+    <td><%= contact.user_id %></td>
+    <td><%= link_to 'Show', contact %></td>
+    <td><%= link_to 'Edit', edit_contact_path(contact) %></td>
+    <td><%= link_to 'Destroy', contact, confirm: 'Are you sure?', method: :delete %></td>
+  </tr>
+<% end %>
+</table>
+
+<br />
+
+<%= link_to 'New Contact', new_contact_path %>
