@@ -1,0 +1,5 @@
+<h1>New contact</h1>
+
+<%= render 'form' %>
+
+<%= link_to 'Back', contacts_path %>
