@@ -1,0 +1,3 @@
+<% @item.comments.each do |t| %>
+  <%= t.title %>
+<% end %>
