@@ -11,7 +11,7 @@
 #
 # It's strongly recommended to check this file into your version control system.
 
-ActiveRecord::Schema.define(:version => 20120311054315) do
+ActiveRecord::Schema.define(:version => 20120407130959) do
 
   create_table "active_admin_comments", :force => true do |t|
     t.integer  "resource_id",   :null => false
@@ -75,6 +75,19 @@ ActiveRecord::Schema.define(:version => 20120311054315) do
   add_index "comments", ["approved_by"], :name => "index_comments_on_approved_by"
   add_index "comments", ["marked_spam"], :name => "index_comments_on_marked_spam"
   add_index "comments", ["suspicious"], :name => "index_comments_on_suspicious"
+
+  create_table "contacts", :force => true do |t|
+    t.string   "name"
+    t.string   "email"
+    t.string   "website"
+    t.string   "phone_number"
+    t.string   "mobile_number"
+    t.string   "country"
+    t.text     "notes"
+    t.integer  "user_id"
+    t.datetime "created_at",    :null => false
+    t.datetime "updated_at",    :null => false
+  end
 
   create_table "item_stats", :force => true do |t|
     t.integer  "item_id"
