@@ -1,0 +1,36 @@
+require 'spec_helper'
+
+describe "contacts/show" do
+  before(:each) do
+    @contact = assign(:contact, stub_model(Contact,
+      :name => "Name",
+      :email => "Email",
+      :website => "Website",
+      :phone_number => "Phone Number",
+      :mobile_number => "Mobile Number",
+      :country => "Country",
+      :notes => "MyText",
+      :user_id => 1
+    ))
+  end
+
+  it "renders attributes in <p>" do
+    render
+    # Run the generator again with the --webrat flag if you want to use webrat matchers
+    rendered.should match(/Name/)
+    # Run the generator again with the --webrat flag if you want to use webrat matchers
+    rendered.should match(/Email/)
+    # Run the generator again with the --webrat flag if you want to use webrat matchers
+    rendered.should match(/Website/)
+    # Run the generator again with the --webrat flag if you want to use webrat matchers
+    rendered.should match(/Phone Number/)
+    # Run the generator again with the --webrat flag if you want to use webrat matchers
+    rendered.should match(/Mobile Number/)
+    # Run the generator again with the --webrat flag if you want to use webrat matchers
+    rendered.should match(/Country/)
+    # Run the generator again with the --webrat flag if you want to use webrat matchers
+    rendered.should match(/MyText/)
+    # Run the generator again with the --webrat flag if you want to use webrat matchers
+    rendered.should match(/1/)
+  end
+end
