@@ -4,6 +4,8 @@ CHANGELOG
 * Removed twitter Javascript helper
 * Changed links from https to http for sharing icons
 * Added resque take task back
+* Added AddressBook
+* country-select gem
 
 == Apr 06, 2012
 * Twitter updating is now using a Resque Queue
